# Honeybee

./: .env.example  .gitignore  .npmrc  Makefile  PRD.md  README.md  TDD.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
agents/honeybee/: __init__.py  api.py  config.py  ledger.py  orchestrator.py
agents/scripts/: inspect_polymarket.py  run_demo.py  single_tick.py
agents/tests/: test_llm_router_mock.py  test_risk.py
config/: mandate.yaml  supabase_schema.sql
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentIdentity.sol  AttestationRegistry.sol
contracts/test/: AgentIdentity.t.sol  AttestationRegistry.t.sol
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  styles.css
docs/: ARCHITECTURE.md
execution/: tsconfig.json
execution/src/: paper.ts  server.ts
infra/: docker-compose.yml
scripts/: agent_loop.ts  arc_bounty_demo.sh  auto_trader.py  bootstrap_privy.ts  bounty_check.sh  check_polymarket.py  fleet_server.mjs  privy_send.mjs  provision_agents.ts  register_ens_sepolia.ts  set_polymarket_allowances.py  setup_ens_subnames.ts  test_agent_pay.ts
shared/: schema.json
src/: _console.py  contracts.py  main.py  orchestrator.py  seed_dashboard.py
src/agents/: arbitrage.py  data.py  discovery.py  execution.py  research.py
src/api/: app.py
tests/: dump_api.py  test_e2e_smoke.py  test_one_cycle.py
var/: agents.json
web/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+86 files in other folders)
