[project]
name = "honeybee"
version = "0.1.0"
description = "Autonomous long-tail prediction market trading agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
    "openai>=1.50",
    "rich>=13.7",
    "aiosqlite>=0.20",
    "tenacity>=8.5",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "agents/tests"]
pythonpath = ["."]
